# qrcode-fastapi

./: .gitignore  .pre-commit-config.yaml  README.md  logging.toml  main.py  pyproject.toml  requirements.txt
config/: __init__.py
config/helper/: funcs.py
config/logging/: __init__.py  log.py
src/: routers.py
src/qrcode_generator/: __init__.py  qrcode_generator.py
tests/app/: test_qrcode_generator.py  test_routers.py
tests/config/: test_funcs.py  test_log.py
