[tool.poetry]
name = "qrcode-fastapi"
version = "0.1.0"
description = "FastAPI application dynamically generates QR codes based on user input."
authors = ["alihezarpisheh <alihezarpisheh@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.3.7"
mypy = "^1.9.0"
isort = "^5.13.2"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-randomly = "^3.15.0"
pytest-repeat = "^0.9.3"
pytest-xdist = "^3.5.0"
pytest-sugar = "^1.0.0"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
qrcode = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
